--- a/test.html
+++ b/test.html
@@ -1,10 +1,12 @@
 <html>
-<head>
-    <title>HTML</title>
-    <meta charset='utf-8'></meta>
-</head>
-<body>
-    <h1>Заголовок</h1>
-    <p>Какой-то текст</p>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Описание вашей страницы для SEO" />
+        <title>HTML</title>
+    </head>
+    <body>
+        <h1>Заголовок</h1>
+        <p>Какой-то текст</p>
+    </body>
 </html>
